xidlc/tests/snapshots/codegen_snapshot__ts__http_client_stream_report.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_client_stream_report.client.ts
===============
// Generated by xidlc. DO NOT EDIT.
import type*as types from"./http_client_stream_report";
import*as zodSchemas from"./http_client_stream_report.iface.zod";
export type FetchLike = (
input : RequestInfo | URL, init ? : RequestInit
) => Promise<
Response
>;
export interface ClientOptions{
    fetch ? : FetchLike;
    headers ? : Record<
    string, string
    >;
}

export class XidlClientError extends Error{
    readonly code : number;
    readonly status : number;
    constructor(
    message : string, code : number, status : number
    ){
        super(
        message
        );
        this.code = code;
        this.status = status;
    }
}

function resolveFetch(
fetchImpl ? : FetchLike
) : FetchLike{
    if(fetchImpl){
        return fetchImpl;
    }

    return window.fetch.bind(
    undefined
    );
}

function joinUrl(
baseUrl : string, path : string
) : string{
    if(baseUrl.endsWith(
    "/"
    )&&path.startsWith(
    "/"
    )){
        return`${baseUrl}${path.slice(
            1
            )}`;
    }
    if(!baseUrl.endsWith(
    "/"
    )&&!path.startsWith(
    "/"
    )){
        return`${baseUrl}/${path}`;
    }
    return`${baseUrl}${path}`;
}

function encodePathSegment(
value : unknown
) : string{
    return encodeURIComponent(
    String(
    value
    )
    );
}

function encodePathCatchAll(
value : unknown
) : string{
    return String(
    value
    )
    .split(
    "/"
    )
    .map(
    (
    segment
    ) => encodeURIComponent(
    segment
    )
    )
    .join(
    "/"
    );
}

function encodeQueryValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeHeaderValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeCookieValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

async function parseXidlError(
resp : Response
) : Promise<
XidlClientError
>{
    const status = resp.status;
    try{
        const body = await resp.json(

        );
        if(body&&typeof body.code==="number"&&typeof body.msg==="string"){
            return new XidlClientError(
            body.msg, body.code, status
            );
        }
    }catch{
        // ignored
    }
    return new XidlClientError(
    `http error: ${status}`, status, status
    );
}

async function*sseJsonStream<T>(
fetchImpl : FetchLike, url : string, options : RequestInit,
) : AsyncIterable<
T
>{
    const headers = new Headers(
    options.headers??{
    }
    );
    if(!headers.has(
    "Accept"
    )){
        headers.set(
        "Accept", "text/event-stream"
        );
    }
    const resp = await fetchImpl(
    url, {
        ...options, headers
    }
    );
    if(!resp.ok){
        throw await parseXidlError(
        resp
        );
    }
    if(!resp.body){
        throw new XidlClientError(
        "sse response has no body", 500, resp.status
        );
    }

    const reader = resp.body.getReader(

    );
    const decoder = new TextDecoder(

    );
    let buffer = "";
    let event = "message";
    let dataLines : string[] = [

    ];
    const flushEvent = (

    ) : {
        done : boolean;
        value ? : T} | null => {
        if(event.length===0&&dataLines.length===0){
            return null;
        }
        const payload = dataLines.join(
        "\n"
        );
        const currentEvent = event||"message";
        event = "message";
        dataLines = [

        ];
        if(currentEvent==="complete"){
            return{
                done : true
            };
        }
        if(currentEvent==="error"){
            let msg = payload;
            let code = 500;
            try{
                const parsed = JSON.parse(
                payload
                );
                if(parsed&&typeof parsed.msg==="string"){
                    msg = parsed.msg;
                }
                if(parsed&&typeof parsed.code==="number"){
                    code = parsed.code;
                }
            }catch{
                // keep raw payload
            }
            throw new XidlClientError(
            msg||"stream error", code, resp.status
            );
        }
        if(currentEvent==="next"||currentEvent==="message"){
            return{
                done : false, value : JSON.parse(
                payload
                )as T
            };
        }
        return null;

    };
    while(true){
        const{value, done} = await reader.read(

        );
        if(done){
            break;
        }
        buffer+=decoder.decode(
        value, {
            stream : true
        }
        );
        while(true){
            const idx = buffer.indexOf(
            "\n"
            );
            if(idx<0){
                break;
            }
            const line = buffer.slice(
            0, idx
            ).replace(
            /\r$/, ""
            );
            buffer = buffer.slice(
            idx+1
            );
            if(line.length===0){
                const flushed = flushEvent(

                );
                if(flushed?.done){
                    return;
                }
                if(flushed?.value!==undefined){
                    yield flushed.value;
                }
                continue;
            }
            if(line.startsWith(
            ":"
            )){
                continue;
            }
            if(line.startsWith(
            "event:"
            )){
                event = line.slice(
                "event:".length
                ).trim(

                );
                continue;
            }
            if(line.startsWith(
            "data:"
            )){
                dataLines.push(
                line.slice(
                "data:".length
                ).trimStart(

                )
                );
            }
        }
    }
}

function ndjsonBody<T>(
source : AsyncIterable<
T
>
) : ReadableStream<
Uint8Array
>{
    const encoder = new TextEncoder(

    );
    const iterator = source[Symbol.asyncIterator](

    );
    return new ReadableStream<
    Uint8Array
    >(
    {
        async pull(
        controller
        ){
            const next = await iterator.next(

            );
            if(next.done){
                controller.close(

                );
                return;
            }
            controller.enqueue(
            encoder.encode(
            `${JSON.stringify(
                next.value
                )}\n`
            )
            );

        }, async cancel(

        ){
            if(iterator.return){
                await iterator.return(

                );
            }
        },
    }
    );
}

export class HttpClientStreamReportServiceClient{
    private readonly baseUrl : string;
    private readonly fetchImpl : FetchLike;
    private readonly defaultHeaders : Record<
    string, string
    >;
    constructor(
    baseUrl : string, options : ClientOptions = {
    }
    ){
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(
        options.fetch
        );
        this.defaultHeaders = options.headers??{
        };
    }

    async upload_parts(
    stream : AsyncIterable<
    HttpClientStreamReportServiceUploadPartsRequest
    >
    ) : Promise<
    types.UploadSummary
    >{
        let path = "/uploads/parts";
        const body = parsed["chunk"];
        const headers = new Headers(
        this.defaultHeaders
        );
        headers.set(
        "Content-Type", "application/json"
        );
        const options = {
            method : "POST", headers, body : JSON.stringify(
            body
            )
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        headers.set(
        "Content-Type", "application/x-ndjson"
        );
        const streamBody = ndjsonBody<
        HttpClientStreamReportServiceUploadPartsRequest
        >(
        stream
        );
        const resp = await this.fetchImpl(
        url, {
            method : "POST", headers, body : streamBody
        }
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as types.UploadSummary;
    }
}
===============
http_client_stream_report.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface UploadChunk{
    part_id : string;
    bytes : Array<
    number
    >;
}

export interface UploadSummary{
    upload_id : string;
    accepted : number;
}
===============
http_client_stream_report.iface.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface HttpClientStreamReportServiceUploadPartsRequest{
    chunk : UploadChunk;
}
===============
http_client_stream_report.iface.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const HttpClientStreamReportServiceUploadPartsRequestSchema = z.object(
{
    chunk : UploadChunkSchema,
}
);
export type HttpClientStreamReportServiceUploadPartsRequest = z.infer<
typeof HttpClientStreamReportServiceUploadPartsRequestSchema
>;
===============
http_client_stream_report.rs
===============
#[derive(Default)]
pub struct UploadChunk {
    pub part_id: String,
    pub bytes: Vec<u8>,
}
impl UploadChunk {}
#[derive(Default)]
pub struct UploadSummary {
    pub upload_id: String,
    pub accepted: u32,
}
impl UploadSummary {}
===============
http_client_stream_report.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const UploadChunkSchema = z.object(
{
    part_id : z.string(

    ), bytes : z.array(
    z.number(

    ).int(

    ).nonnegative(

    )
    ),
}
);
export type UploadChunk = z.infer<
typeof UploadChunkSchema
>;
export const UploadSummarySchema = z.object(
{
    upload_id : z.string(

    ), accepted : z.number(

    ).int(

    ).nonnegative(

    ),
}
);
export type UploadSummary = z.infer<
typeof UploadSummarySchema
>;
