xidlc/tests/snapshots/codegen_snapshot__ts__http_defaults.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_defaults.client.ts
===============
// Generated by xidlc. DO NOT EDIT.
import type*as types from"./http_defaults";
import*as zodSchemas from"./http_defaults.iface.zod";
export type FetchLike = (
input : RequestInfo | URL, init ? : RequestInit
) => Promise<
Response
>;
export interface ClientOptions{
    fetch ? : FetchLike;
    headers ? : Record<
    string, string
    >;
}

export class XidlClientError extends Error{
    readonly code : number;
    readonly status : number;
    constructor(
    message : string, code : number, status : number
    ){
        super(
        message
        );
        this.code = code;
        this.status = status;
    }
}

function resolveFetch(
fetchImpl ? : FetchLike
) : FetchLike{
    if(fetchImpl){
        return fetchImpl;
    }

    return window.fetch.bind(
    undefined
    );
}

function joinUrl(
baseUrl : string, path : string
) : string{
    if(baseUrl.endsWith(
    "/"
    )&&path.startsWith(
    "/"
    )){
        return`${baseUrl}${path.slice(
            1
            )}`;
    }
    if(!baseUrl.endsWith(
    "/"
    )&&!path.startsWith(
    "/"
    )){
        return`${baseUrl}/${path}`;
    }
    return`${baseUrl}${path}`;
}

function encodePathSegment(
value : unknown
) : string{
    return encodeURIComponent(
    String(
    value
    )
    );
}

function encodePathCatchAll(
value : unknown
) : string{
    return String(
    value
    )
    .split(
    "/"
    )
    .map(
    (
    segment
    ) => encodeURIComponent(
    segment
    )
    )
    .join(
    "/"
    );
}

function encodeQueryValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeHeaderValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

function encodeCookieValue(
value : unknown
) : string{
    if(value===null||value===undefined){
        return"";
    }
    if(typeof value==="string"||typeof value==="number"||typeof value==="boolean"){
        return String(
        value
        );
    }
    return JSON.stringify(
    value
    );
}

async function parseXidlError(
resp : Response
) : Promise<
XidlClientError
>{
    const status = resp.status;
    try{
        const body = await resp.json(

        );
        if(body&&typeof body.code==="number"&&typeof body.msg==="string"){
            return new XidlClientError(
            body.msg, body.code, status
            );
        }
    }catch{
        // ignored
    }
    return new XidlClientError(
    `http error: ${status}`, status, status
    );
}

async function*sseJsonStream<T>(
fetchImpl : FetchLike, url : string, options : RequestInit,
) : AsyncIterable<
T
>{
    const headers = new Headers(
    options.headers??{
    }
    );
    if(!headers.has(
    "Accept"
    )){
        headers.set(
        "Accept", "text/event-stream"
        );
    }
    const resp = await fetchImpl(
    url, {
        ...options, headers
    }
    );
    if(!resp.ok){
        throw await parseXidlError(
        resp
        );
    }
    if(!resp.body){
        throw new XidlClientError(
        "sse response has no body", 500, resp.status
        );
    }

    const reader = resp.body.getReader(

    );
    const decoder = new TextDecoder(

    );
    let buffer = "";
    let event = "message";
    let dataLines : string[] = [

    ];
    const flushEvent = (

    ) : {
        done : boolean;
        value ? : T} | null => {
        if(event.length===0&&dataLines.length===0){
            return null;
        }
        const payload = dataLines.join(
        "\n"
        );
        const currentEvent = event||"message";
        event = "message";
        dataLines = [

        ];
        if(currentEvent==="complete"){
            return{
                done : true
            };
        }
        if(currentEvent==="error"){
            let msg = payload;
            let code = 500;
            try{
                const parsed = JSON.parse(
                payload
                );
                if(parsed&&typeof parsed.msg==="string"){
                    msg = parsed.msg;
                }
                if(parsed&&typeof parsed.code==="number"){
                    code = parsed.code;
                }
            }catch{
                // keep raw payload
            }
            throw new XidlClientError(
            msg||"stream error", code, resp.status
            );
        }
        if(currentEvent==="next"||currentEvent==="message"){
            return{
                done : false, value : JSON.parse(
                payload
                )as T
            };
        }
        return null;

    };
    while(true){
        const{value, done} = await reader.read(

        );
        if(done){
            break;
        }
        buffer+=decoder.decode(
        value, {
            stream : true
        }
        );
        while(true){
            const idx = buffer.indexOf(
            "\n"
            );
            if(idx<0){
                break;
            }
            const line = buffer.slice(
            0, idx
            ).replace(
            /\r$/, ""
            );
            buffer = buffer.slice(
            idx+1
            );
            if(line.length===0){
                const flushed = flushEvent(

                );
                if(flushed?.done){
                    return;
                }
                if(flushed?.value!==undefined){
                    yield flushed.value;
                }
                continue;
            }
            if(line.startsWith(
            ":"
            )){
                continue;
            }
            if(line.startsWith(
            "event:"
            )){
                event = line.slice(
                "event:".length
                ).trim(

                );
                continue;
            }
            if(line.startsWith(
            "data:"
            )){
                dataLines.push(
                line.slice(
                "data:".length
                ).trimStart(

                )
                );
            }
        }
    }
}

function ndjsonBody<T>(
source : AsyncIterable<
T
>
) : ReadableStream<
Uint8Array
>{
    const encoder = new TextEncoder(

    );
    const iterator = source[Symbol.asyncIterator](

    );
    return new ReadableStream<
    Uint8Array
    >(
    {
        async pull(
        controller
        ){
            const next = await iterator.next(

            );
            if(next.done){
                controller.close(

                );
                return;
            }
            controller.enqueue(
            encoder.encode(
            `${JSON.stringify(
                next.value
                )}\n`
            )
            );

        }, async cancel(

        ){
            if(iterator.return){
                await iterator.return(

                );
            }
        },
    }
    );
}

export class HttpDefaultsServiceClient{
    private readonly baseUrl : string;
    private readonly fetchImpl : FetchLike;
    private readonly defaultHeaders : Record<
    string, string
    >;
    constructor(
    baseUrl : string, options : ClientOptions = {
    }
    ){
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(
        options.fetch
        );
        this.defaultHeaders = options.headers??{
        };
    }

    async get_name(
    name : string
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceGetNameRequestSchema.parse(
        {
            "name" : name
        }
        );
        let path = "/get_name";
        const query = new URLSearchParams(

        );
        query.set(
        "name", encodeQueryValue(
        parsed["name"]
        )
        );
        const queryString = query.toString(

        );
        if(queryString.length>0){
            path = `${path}?${queryString}`;
        }
        const headers = new Headers(
        this.defaultHeaders
        );
        const options = {
            method : "POST", headers
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }

    async list_orders(
    user_id : number, page : number, size : number
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceListOrdersRequestSchema.parse(
        {
            "user_id" : user_id, "page" : page, "size" : size
        }
        );
        let path = "/list_orders/{uid}";
        path = path.replace(
        "{"+"uid"+"}", encodePathSegment(
        parsed["user_id"]
        )
        );
        const query = new URLSearchParams(

        );
        query.set(
        "page", encodeQueryValue(
        parsed["page"]
        )
        );
        query.set(
        "size", encodeQueryValue(
        parsed["size"]
        )
        );
        const queryString = query.toString(

        );
        if(queryString.length>0){
            path = `${path}?${queryString}`;
        }
        const headers = new Headers(
        this.defaultHeaders
        );
        const options = {
            method : "GET", headers
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }

    async create_user(
    req : types.CreateUserRequest
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceCreateUserRequestSchema.parse(
        {
            "req" : req
        }
        );
        let path = "/users";
        const body = parsed["req"];
        const headers = new Headers(
        this.defaultHeaders
        );
        headers.set(
        "Content-Type", "application/json"
        );
        const options = {
            method : "POST", headers, body : JSON.stringify(
            body
            )
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }

    async search_user(
    name : string, age : number
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceSearchUserRequestSchema.parse(
        {
            "name" : name, "age" : age
        }
        );
        let path = "/users/search";
        const body = {
            "name" : parsed["name"], "age" : parsed["age"],
        };
        const headers = new Headers(
        this.defaultHeaders
        );
        headers.set(
        "Content-Type", "application/json"
        );
        const options = {
            method : "POST", headers, body : JSON.stringify(
            body
            )
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }

    async get_user(
    id : number, lang : string
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceGetUserRequestSchema.parse(
        {
            "id" : id, "lang" : lang
        }
        );
        let path = "/v1/users/{id}";
        path = path.replace(
        "{"+"id"+"}", encodePathSegment(
        parsed["id"]
        )
        );
        const query = new URLSearchParams(

        );
        query.set(
        "lang", encodeQueryValue(
        parsed["lang"]
        )
        );
        const queryString = query.toString(

        );
        if(queryString.length>0){
            path = `${path}?${queryString}`;
        }
        const headers = new Headers(
        this.defaultHeaders
        );
        const options = {
            method : "GET", headers
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }

    async get_user_alias(
    user_id : number, locale : string
    ) : Promise<
    string
    >{
        const parsed = zodSchemas.HttpDefaultsServiceGetUserAliasRequestSchema.parse(
        {
            "user_id" : user_id, "locale" : locale
        }
        );
        let path = "/get_user_alias/{id}";
        path = path.replace(
        "{"+"id"+"}", encodePathSegment(
        parsed["user_id"]
        )
        );
        const query = new URLSearchParams(

        );
        query.set(
        "lang", encodeQueryValue(
        parsed["locale"]
        )
        );
        const queryString = query.toString(

        );
        if(queryString.length>0){
            path = `${path}?${queryString}`;
        }
        const headers = new Headers(
        this.defaultHeaders
        );
        const options = {
            method : "POST", headers
        };
        const url = joinUrl(
        this.baseUrl, path
        );
        const resp = await this.fetchImpl(
        url, options
        );
        if(!resp.ok){
            throw await parseXidlError(
            resp
            );
        }
        const data = await resp.json(

        );
        return data as string;
    }
}
===============
http_defaults.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface CreateUserRequest{
    name : string;
    age : number;
}
===============
http_defaults.iface.d.ts
===============
// Generated by xidlc. DO NOT EDIT.
export interface HttpDefaultsServiceGetNameRequest{
    name : string;
}

export interface HttpDefaultsServiceListOrdersRequest{
    user_id : number;
    page : number;
    size : number;
}

export interface HttpDefaultsServiceCreateUserRequest{
    req : CreateUserRequest;
}

export interface HttpDefaultsServiceSearchUserRequest{
    name : string;
    age : number;
}

export interface HttpDefaultsServiceGetUserRequest{
    id : number;
    lang : string;
}

export interface HttpDefaultsServiceGetUserAliasRequest{
    user_id : number;
    locale : string;
}
===============
http_defaults.iface.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const HttpDefaultsServiceGetNameRequestSchema = z.object(
{
    name : z.string(

    ),
}
);
export type HttpDefaultsServiceGetNameRequest = z.infer<
typeof HttpDefaultsServiceGetNameRequestSchema
>;
export const HttpDefaultsServiceListOrdersRequestSchema = z.object(
{
    user_id : z.number(

    ).int(

    ).nonnegative(

    ), page : z.number(

    ).int(

    ).nonnegative(

    ), size : z.number(

    ).int(

    ).nonnegative(

    ),
}
);
export type HttpDefaultsServiceListOrdersRequest = z.infer<
typeof HttpDefaultsServiceListOrdersRequestSchema
>;
export const HttpDefaultsServiceCreateUserRequestSchema = z.object(
{
    req : CreateUserRequestSchema,
}
);
export type HttpDefaultsServiceCreateUserRequest = z.infer<
typeof HttpDefaultsServiceCreateUserRequestSchema
>;
export const HttpDefaultsServiceSearchUserRequestSchema = z.object(
{
    name : z.string(

    ), age : z.number(

    ).int(

    ).nonnegative(

    ),
}
);
export type HttpDefaultsServiceSearchUserRequest = z.infer<
typeof HttpDefaultsServiceSearchUserRequestSchema
>;
export const HttpDefaultsServiceGetUserRequestSchema = z.object(
{
    id : z.number(

    ).int(

    ).nonnegative(

    ), lang : z.string(

    ),
}
);
export type HttpDefaultsServiceGetUserRequest = z.infer<
typeof HttpDefaultsServiceGetUserRequestSchema
>;
export const HttpDefaultsServiceGetUserAliasRequestSchema = z.object(
{
    user_id : z.number(

    ).int(

    ).nonnegative(

    ), locale : z.string(

    ),
}
);
export type HttpDefaultsServiceGetUserAliasRequest = z.infer<
typeof HttpDefaultsServiceGetUserAliasRequestSchema
>;
===============
http_defaults.rs
===============
#[derive(Debug,::serde::Serialize,::serde::Deserialize)]
pub struct CreateUserRequest{
    pub name:String,
    pub age:u32,
}

impl CreateUserRequest{
}
===============
http_defaults.zod.ts
===============
// Generated by xidlc. DO NOT EDIT.
import{z}from"zod";
export const CreateUserRequestSchema = z.object(
{
    name : z.string(

    ), age : z.number(

    ).int(

    ).nonnegative(

    ),
}
);
export type CreateUserRequest = z.infer<
typeof CreateUserRequestSchema
>;
